@@ -2,6 +2,7 @@ Revision history for Apache2-HttpEquiv
 
 1.00   NOT
 	- No functional changes
+	- Tests now use Moo instead of Moose (runtime doesn't use either)
 	- Release tests moved to xt/
 
 0.01   2012-03-03
